base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtualservice
spec:
  hosts:
    - "default.localtest.me"
  gateways:
  - istio-ingress/ingressgateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: nginx-service
            port:
              number: 80
